--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -36,7 +36,7 @@
                 <ul>
                     <li>
                         <!-- List: my tasks -->
-                        <c:set var="tasks" value="#{AktuelleSchritteForm.user.tasks}"/>
+                        <c:set var="tasks" value="#{AktuelleSchritteForm.tasksInProgress}"/>
                         <a href="#"><i class="fa fa-bell-o fa-lg"/>
                             <h:panelGroup rendered="#{tasks.size() gt 0}" styleClass="batch-count bc-alert">#{tasks.size()}</h:panelGroup>
                         </a>
