--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -16,44 +16,33 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h4>
-        <h:outputText value="#{msgs.vorlagen}"/>
-    </h4>
-    <p:dataTable var="item"
-                 value="#{ProzessverwaltungForm.process.templates}"
-                 rowIndexVar="index">
-        <!-- number -->
-        <p:column headerText="#{msgs.nr}">
-            <h:outputText value="#{index+1}"/>
+    <p:dataTable var="property"
+                 value="#{ProzessverwaltungForm.templates}">
+        <p:column headerText="#{msgs.titel}">
+            <h:outputText value="#{property.title}"/>
         </p:column>
-
-        <!-- properties -->
-        <p:column headerText="#{msgs.eigenschaften}">
-            <p:dataTable var="property"
-                         value="#{item.properties}">
-                <p:column>
-                    <h:outputText value="#{property.title}"/>
-                </p:column>
-                <p:column>
-                    <h:outputText value="#{property.value}"/>
-                </p:column>
-            </p:dataTable>
+        <p:column headerText="#{msgs.value}">
+            <h:outputText value="#{property.value}"/>
         </p:column>
-
-        <!-- actions -->
         <p:column headerText="#{msgs.auswahl}"
+                  styleClass="actionsColumn"
                   rendered="#{(LoginForm.maximaleBerechtigung eq 1) or (LoginForm.maximaleBerechtigung eq 2)}">
-            <h:link outcome="templateEdit"
-                    title="#{msgs.vorlageBearbeiten}">
-                <f:param name="id" value="#{item.id}"/>
+            <p:commandLink title="#{msgs.bearbeiten}"
+                           oncomplete="PF('editTemplateDialog).show()">
                 <i class="fa fa-pencil-square-o fa-lg"/>
-            </h:link>
-            <h:commandLink action="#{ProzessverwaltungForm.VorlageNeu}"
-                           rendered="#{(LoginForm.maximaleBerechtigung eq 1) or (LoginForm.maximaleBerechtigung eq 2)}"
-                           title="#{msgs.vorlageHinzufuegen}">
-                <i class="fa fa-plus-circle fa-lg"/>
-            </h:commandLink>
+                <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
+            </p:commandLink>
+            <p:commandLink title="#{msgs.loeschen}"
+                           action="#{ProzessverwaltungForm.deleteTemplateProperty}">
+                <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
+                <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
+            </p:commandLink>
         </p:column>
-
     </p:dataTable>
+    <p:commandButton value="#{msgs.eigenschaftHinzufuegen}"
+                     actionListener="#{ProzessverwaltungForm.createTemplateProperty}"
+                     oncomplete="PF('editTemplateDialog').show()"
+                     icon="fa fa-plus-circle fa-lg"
+                     iconPos="right"
+                     styleClass="button-filled-green"/>
 </ui:composition>
