--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -18,18 +18,30 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable var="property"
                  value="#{ProzessverwaltungForm.workpieces}">
-        <p:column>
+        <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{property.title}"/>
         </p:column>
-        <p:column>
+        <p:column headerText="#{msgs.value}">
             <h:outputText value="#{property.value}"/>
         </p:column>
-        <p:column headerText="#{msgs.auswahl}">
-            <h:link outcome="workpieceEdit"
-                    title="#{msgs.werkstueckBearbeiten}">
-                <f:param name="id" value="#{item.id}"/>
+        <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
+            <p:commandLink title="#{msgs.bearbeiten}"
+                           oncomplete="PF('editWorkpieceDialog').show()">
                 <i class="fa fa-pencil-square-o fa-lg"/>
-            </h:link>
+                <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
+            </p:commandLink>
+            <p:commandLink title="#{msgs.loeschen}"
+                           action="#{ProzessverwaltungForm.deleteWorkpieceProperty}">
+                <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
+                <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
+            </p:commandLink>
         </p:column>
     </p:dataTable>
+    <p:commandButton value="#{msgs.eigenschaftHinzufuegen}"
+                     actionListener="ProzessverwaltungForm.createWorkpieceProperty}"
+                     update="@(.editDialog)"
+                     oncomplete="PF('editWorkpieceDialog').show()"
+                     icon="fa fa-plus-circle fa-lg"
+                     iconPos="right"
+                     styleClass="button-filled-green"/>
 </ui:composition>
