--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxActivities.xhtml
@@ -18,8 +18,7 @@
 
     <h:panelGroup
             rendered="#{AktuelleSchritteForm.mySchritt.processingUser.id == LoginForm.myBenutzer.id}">
-
-        <!-- ++++++++++++++++     Import      ++++++++++++++++ -->
+        <!-- Import -->
         <ui:fragment rendered="#{AktuelleSchritteForm.editMode.mode == '' and AktuelleSchritteForm.mySchritt.process.blockedUser == null and AktuelleSchritteForm.mySchritt.typeImportFileUpload}">
             <table cellpadding="3" cellspacing="0" width="100%"
                    class="eingabeBoxen" style="margin-top:20px">
@@ -31,7 +30,6 @@
                 <tr>
                     <td class="eingabeBoxen_row2">
                         <h:panelGrid columns="1">
-
                             <!-- Import-Upload -->
                             <h:panelGroup>
                                 <h:panelGroup rendered="#{Import.importMessage !=''}">
@@ -47,15 +45,14 @@
                                     <br/>
                                     <br/>
                                 </h:panelGroup>
-
                                 <h:form enctype="multipart/form-data" id="formupload">
                                     <h:inputFile id="fileupload" accept="image/*"
-                                                       value="#{Import.uploadedFile}" storage="file"
-                                                       styleClass="fileUploadInput" required="false"/>
+                                                 value="#{Import.uploadedFile}" storage="file"
+                                                 styleClass="fileUploadInput" required="false"/>
                                     <h:commandButton value="#{msgs.metadatenImportieren}" id="button1"
                                                      action="#{Import.start}">
                                         <f:setPropertyActionListener target="#{Import.task}"
-                                                                value="#{AktuelleSchritteForm.mySchritt}"/>
+                                                                     value="#{AktuelleSchritteForm.mySchritt}"/>
                                     </h:commandButton>
                                 </h:form>
                             </h:panelGroup>
@@ -65,9 +62,9 @@
             </table>
         </ui:fragment>
 
-        <!-- ++++++++++++++++     // Import      ++++++++++++++++ -->
+        <!--  Import -->
         <h:form id="actionform">
-            <!-- ++++++++++++++++     Action      ++++++++++++++++ -->
+            <!-- Action -->
             <ui:fragment rendered="#{AktuelleSchritteForm.editMode.mode == ''}">
                 <table cellpadding="3" cellspacing="0" width="100%"
                        class="eingabeBoxen" style="margin-top:20px">
@@ -80,7 +77,7 @@
                         <td class="eingabeBoxen_row2">
                             <h:panelGrid columns="1">
 
-                                <!-- Sperrung der Metadaten anzeigen -->
+                                <!-- Show Metadata Block -->
                                 <h:panelGroup
                                         style="color: red;margin-top:5px;margin-bottom:15px;display:block"
                                         rendered="#{AktuelleSchritteForm.mySchritt.process.blockedUser != null}">
@@ -100,7 +97,7 @@
                                     </h:panelGrid>
                                     <h:outputText value="#{msgs.spaeter}"/>
 
-                                    <!-- Bei Sperrung durch eigenen Benutzer: Sperrung aufheben können -->
+                                    <!-- If blocked by yourself: you can unblocked -->
                                     <h:commandLink id="action1"
                                                    rendered="#{(AktuelleSchritteForm.mySchritt.process.blockedUser != null) and (AktuelleSchritteForm.mySchritt.process.blockedUser.id == LoginForm.myBenutzer.id)}"
                                                    action="#{AktuelleSchritteForm.sperrungAufheben}"
@@ -110,22 +107,9 @@
                                         <h:outputText value="#{msgs.oderSperrungAufheben}"
                                                       style="font-weight:bold;font-style:underline"/>
                                     </h:commandLink>
-
                                 </h:panelGroup>
 
-                                <!-- Russland-Export-Schaltknopf -->
-                                <!--
-                                <h:commandLink
-                                        rendered="#{AktuelleSchritteForm.mySchritt.typExportRus and AktuelleSchritteForm.mySchritt.prozess.benutzerGesperrt == null}"
-                                        action="#{AktuelleSchritteForm.DownloadRusExport}"
-                                        title="#{msgs.russischeMetadatenExportieren}">
-                                    <h:graphicImage value="/pages/images/buttons/rus.gif" alt=""
-                                                    style="margin-right:3px;vertical-align:middle" />
-                                    <h:outputText value="#{msgs.russischeMetadatenExportieren}" />
-                                </h:commandLink>
-                                -->
-
-                                <!-- Script-Schaltknopf -->
+                                <!-- Script-button -->
                                 <h:commandLink id="action3"
                                                rendered="#{AktuelleSchritteForm.mySchritt.scriptPath != null and AktuelleSchritteForm.mySchritt.scriptPath != '' and AktuelleSchritteForm.mySchritt.process.blockedUser == null}"
                                                action="#{AktuelleSchritteForm.executeScript}"
@@ -139,7 +123,7 @@
                                             value="#{msgs.scriptAusfuehren}: #{AktuelleSchritteForm.mySchritt.scriptName}"/>
                                 </h:commandLink>
 
-                                <!-- tiffHeaderDownload-Schaltknopf -->
+                                <!-- tiffHeaderDownload-button -->
                                 <h:commandLink id="action8"
                                                rendered="#{0==1 and AktuelleSchritteForm.mySchritt.process.blockedUser == null}"
                                                action="#{AktuelleSchritteForm.downloadTiffHeader}"
@@ -149,14 +133,14 @@
                                     <h:outputText value="#{msgs.dateiMitTiffHeaderSpeichern}"/>
                                 </h:commandLink>
 
-                                <!-- Import in das DMS-Schaltknopf -->
+                                <!-- Import DMS-button -->
 
                                 <!-- TODO: delete this warning once the root cause of the timeout problem is solved  -->
                                 <h:outputText style="back-color:blue; color: red; font-weight: bold;"
                                               rendered="#{AktuelleSchritteForm.mySchritt.typeExportDMS and AktuelleSchritteForm.mySchritt.process.blockedUser == null}"
                                               value="#{msgs.timeoutWarningDMS}"/>
 
-                                <!-- Upload-Schaltknopf -->
+                                <!-- Upload-button -->
                                 <h:commandLink id="action9"
                                                rendered="#{AktuelleSchritteForm.mySchritt.typeExportDMS and AktuelleSchritteForm.mySchritt.process.blockedUser == null}"
                                                action="#{AktuelleSchritteForm.exportDMS}"
@@ -166,7 +150,7 @@
                                     <h:outputText value="#{msgs.importDms}"/>
                                 </h:commandLink>
 
-                                <!-- Metadaten-Schaltknopf -->
+                                <!-- Metadaten-button -->
                                 <h:commandLink id="action10"
                                                rendered="#{AktuelleSchritteForm.mySchritt.typeMetadata and AktuelleSchritteForm.mySchritt.process.blockedUser == null}"
                                                action="#{Metadaten.readXml}"
@@ -183,7 +167,7 @@
                                     <f:param name="zurueck" value="AktuelleSchritteBearbeiten"/>
                                 </h:commandLink>
 
-                                <!-- Bearbeitung abbrechen-Schaltknopf -->
+                                <!-- Edit Cancel-buttons -->
                                 <h:commandLink id="action11"
                                                action="#{AktuelleSchritteForm.schrittDurchBenutzerZurueckgeben}"
                                                title="#{msgs.bearbeitungDiesesSchrittesAbgeben}"
@@ -193,7 +177,7 @@
                                     <h:outputText value="#{msgs.bearbeitungDiesesSchrittesAbgeben}"/>
                                 </h:commandLink>
 
-                                <!-- Schritt zurückgeben an vorherige Station für Korrekturzwecke -->
+                                <!-- Return to previous station for correction purposes-->
                                 <h:panelGroup rendered="#{AktuelleSchritteForm.sizeOfPreviousStepsForProblemReporting > 0}">
                                     <span class="toggle" data-for="toggle-1">
                                         <h:graphicImage alt="step back"
@@ -204,7 +188,6 @@
                                     </span>
 
                                     <div class="toggle-1" style="display: none;">
-
                                         <h:panelGrid columns="2" style="margin-left:40px;" id="grid3"
                                                      rowClasses="top"
                                                      columnClasses="standardTable_Column,standardTable_ColumnRight">
@@ -219,7 +202,7 @@
                                             <h:outputText value="#{msgs.bemerkung}"/>
                                             <h:inputTextarea style="width:350px;height:80px"
                                                              value="#{AktuelleSchritteForm.problem.message}"/>
-                                            <!-- Statistische Auswertung-Schaltknopf für gesamtes Trefferset -->
+                                            <!-- Statistical evaluation button for the entire hit set -->
                                             <h:outputText value=""/>
                                             <h:commandLink id="action13"
                                                            action="#{AktuelleSchritteForm.reportProblem}"
@@ -229,15 +212,12 @@
                                             </h:commandLink>
                                         </h:panelGrid>
                                     </div>
-
                                 </h:panelGroup>
 
-                                <!-- Schritt weitergeben an nachfolgende Station für KorrekturBehobenZwecke -->
+                                <!-- Pass to next station for corrective purpose-->
                                 <h:panelGroup
                                         rendered="#{AktuelleSchritteForm.mySchritt.priority>9 and AktuelleSchritteForm.sizeOfNextStepsForProblemSolution > 0}">
-
                                     <span class="toggle" data-for="toggle-2">
-
                                         <h:graphicImage alt="step forward"
                                                         value="/pages/images/buttons/step_for_20px.gif"
                                                         style="margin-right:3px;vertical-align:middle"/>
@@ -245,7 +225,6 @@
                                                 value="#{msgs.meldungUeberProblemloesungAnNachchfolgendeStationSenden}"/>
                                     </span>
                                     <div class="toggle-2" style="display: none;">
-
                                         <h:panelGrid columns="2" style="margin-left:40px;"
                                                      rowClasses="top" id="grid1"
                                                      columnClasses="standardTable_Column,standardTable_ColumnRight">
@@ -260,7 +239,7 @@
                                             <h:outputText value="#{msgs.bemerkung}"/>
                                             <h:inputTextarea style="width:350px;height:80px" id="input1"
                                                              value="#{AktuelleSchritteForm.solution.message}"/>
-                                            <!-- Statistische Auswertung-Schaltknopf für gesamtes Trefferset -->
+                                            <!-- Statistical evaluation button for the entire hit set -->
                                             <h:outputText value=""/>
                                             <h:commandLink id="action14"
                                                            action="#{AktuelleSchritteForm.solveProblem}"
@@ -273,7 +252,7 @@
 
                                 </h:panelGroup>
 
-                                <!-- Abschliessen-Schaltknopf -->
+                                <!-- Lock button -->
                                 <h:commandLink id="action15"
                                                action="#{AktuelleSchritteForm.schrittDurchBenutzerAbschliessen}"
                                                title="#{msgs.diesenSchrittAbschliessen}"
@@ -282,14 +261,11 @@
                                                     style="margin-right:3px;vertical-align:middle"/>
                                     <h:outputText value="#{msgs.diesenSchrittAbschliessen}"/>
                                 </h:commandLink>
-
                             </h:panelGrid>
                         </td>
                     </tr>
-
                 </table>
             </ui:fragment>
-            <!-- ++++++++++++++++     // Action      ++++++++++++++++ -->
         </h:form>
     </h:panelGroup>
 </ui:composition>
