--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -16,7 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable id="vorgaenge"
+    <p:dataTable id="taskTable"
                  var="item"
                  value="#{ProzessverwaltungForm.process.tasks}"
                  sortBy="#{item.ordering}">
@@ -85,6 +85,11 @@
                 <f:param name="id" value="#{item.id}"/>
                 <i class="fa fa-pencil-square-o fa-lg"/>
             </h:link>
+            <h:commandLink title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteTask(item.id)}"
+                           onclick="return confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}?')"
+                           immediate="true">
+                <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
+            </h:commandLink>
         </p:column>
 
         <p:rowExpansion>
