Link to new processEdit page from templateList

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -30,7 +30,7 @@
 
         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
             <h:outputText>
-                <h:link outcome="/pages/ProzessverwaltungBearbeiten"
+                <h:link outcome="/pages/processEdit"
                         title="#{msgs.prozessBearbeiten}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="id" value="#{item.id}"/>
