fix workpiece properties

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -43,6 +43,7 @@
     </p:dataTable>
     <p:commandButton actionListener="#{ProzessverwaltungForm.createNewProperty()}"
                      oncomplete="PF('editPropertyDialog').show()"
+                     update="@(.editDialog)"
                      value="#{msgs.eigenschaftHinzufuegen}"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
