--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -38,10 +38,12 @@
         </p:column>
     </p:dataTable>
     <p:commandButton value="#{msgs.eigenschaftHinzufuegen}"
-                     actionListener="ProzessverwaltungForm.createWorkpieceProperty}"
+                     actionListener="#{ProzessverwaltungForm.createWorkpieceProperty}"
                      update="@(.editDialog)"
                      oncomplete="PF('editWorkpieceDialog').show()"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
-                     styleClass="button-filled-green"/>
+                     styleClass="button-filled-green">
+        <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}" value="#{objectMode.WORKPIECEPROPERTY}"/>
+    </p:commandButton>
 </ui:composition>
