--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -87,7 +87,7 @@
             </h:link>
             <h:commandLink title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteTask}" immediate="true"
                            onclick="return confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}')">
-                <i class="fa fa-trash-o fa-lg"/>
+                <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener
                         target="#{ProzessverwaltungForm.task}"
                         value="#{item}"/>
