--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -16,7 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="property"
+    <p:dataTable id="workpiecePropertyTable" var="property"
                  value="#{ProzessverwaltungForm.workpieces}">
         <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{property.title}"/>
@@ -31,7 +31,8 @@
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
             </p:commandLink>
             <p:commandLink title="#{msgs.loeschen}"
-                           action="#{ProzessverwaltungForm.deleteWorkpieceProperty}">
+                           action="#{ProzessverwaltungForm.deleteWorkpieceProperty}"
+                           update="workpiecePropertyTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
             </p:commandLink>
@@ -39,6 +40,7 @@
     </p:dataTable>
     <p:commandButton value="#{msgs.eigenschaftHinzufuegen}"
                      actionListener="#{ProzessverwaltungForm.createWorkpieceProperty}"
+                     update="@(.editDialog)"
                      oncomplete="PF('editWorkpieceDialog').show()"
                      icon="fa fa-plus-circle fa-lg"
                      iconPos="right"
