--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsers.xhtml
@@ -16,14 +16,15 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="user" value="#{ProzessverwaltungForm.task.users}">
+    <p:dataTable var="user" value="#{ProzessverwaltungForm.task.users}" id="taskUserTable">
         <p:column headerText="#{msgs.benutzer}">
             <h:outputText value="#{user.surname}, #{user.name}"/>
         </p:column>
 
         <p:column headerText="#{msgs.loeschen}">
             <p:commandLink action="#{ProzessverwaltungForm.deleteUser}"
-                           title="#{msgs.berechtigungLoeschen}"
+                           title="#{msgs.removeUser}"
+                           immediate="true"
                            update="@form">
                 <i class="fa fa-trash-o fa-lg"/>
                 <f:param name="ID" value="#{user.id}"/>
