--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
@@ -16,14 +16,16 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="usergroup" id="taskUsergroupList"
+    <p:dataTable var="usergroup" id="taskUsergroupTable"
                  value="#{ProzessverwaltungForm.task.userGroups}">
         <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{usergroup.title}"/>
         </p:column>
         <p:column headerText="#{msgs.loeschen}">
             <p:commandLink action="#{ProzessverwaltungForm.deleteUserGroup}"
-                           title="#{msgs.berechtigungLoeschen}">
+                           immediate="true"
+                           update="taskEditForm:tabs:taskUsergroupTable"
+                           title="#{msgs.removeUsergroup}">
                 <i class="fa fa-trash-o fa-lg"/>
                 <f:param name="ID" value="#{usergroup.id}"/>
             </p:commandLink>
