--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -17,6 +17,7 @@
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <p:dataTable var="item"
+                 id="propertyTable"
                  value="#{ProzessverwaltungForm.properties}">
         <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{item.title}"/>
@@ -26,22 +27,23 @@
             <h:outputLink title="#{item.value}" value="#{item.value}" rendered="#{item.type.name eq 'link'}"/>
         </p:column>
         <p:column headerText="#{msgs.choice}" styleClass="actionsColumn">
-            <p:commandLink title="#{msgs.bearbeiten}" oncomplete="PF('editPropertyDialog').show()">
+            <p:commandLink id="editProperty" title="#{msgs.bearbeiten}" oncomplete="PF('editPropertyDialog').show()">
                 <i class="fa fa-pencil-square-o fa-lg"/>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}" value="#{objectMode.PROCESSPROPERTY}"/>
             </p:commandLink>
-            <p:commandLink title="#{msgs.duplicate}" action="#{ProzessverwaltungForm.duplicateProperty}">
+            <p:commandLink id="duplicateProperty" title="#{msgs.duplicate}" action="#{ProzessverwaltungForm.duplicateProperty}">
                 <h:outputText><i class="fa fa-files-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
             </p:commandLink>
-            <p:commandLink title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteProperty}">
+            <p:commandLink id="deleteProperty" title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
             </p:commandLink>
         </p:column>
     </p:dataTable>
     <p:commandButton actionListener="#{ProzessverwaltungForm.createNewProperty()}"
+                     id="createNewProperty"
                      oncomplete="PF('editPropertyDialog').show()"
                      update="@(.editDialog)"
                      value="#{msgs.eigenschaftHinzufuegen}"
