--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateList.xhtml
@@ -16,7 +16,8 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="property"
+    <p:dataTable id="templatePropertyTable"
+                 var="property"
                  value="#{ProzessverwaltungForm.templates}">
         <p:column headerText="#{msgs.titel}">
             <h:outputText value="#{property.title}"/>
@@ -27,19 +28,22 @@
         <p:column headerText="#{msgs.auswahl}"
                   styleClass="actionsColumn"
                   rendered="#{(LoginForm.maximaleBerechtigung eq 1) or (LoginForm.maximaleBerechtigung eq 2)}">
-            <p:commandLink title="#{msgs.bearbeiten}"
+            <p:commandLink id="editTemplateProperty"
+                           title="#{msgs.bearbeiten}"
                            oncomplete="PF('editTemplateDialog').show()">
                 <i class="fa fa-pencil-square-o fa-lg"/>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
             </p:commandLink>
-            <p:commandLink title="#{msgs.loeschen}"
+            <p:commandLink id="deleteTemplateProperty"
+                           title="#{msgs.loeschen}"
                            action="#{ProzessverwaltungForm.deleteTemplateProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.templateProperty}" value="#{property}"/>
             </p:commandLink>
         </p:column>
     </p:dataTable>
-    <p:commandButton value="#{msgs.eigenschaftHinzufuegen}"
+    <p:commandButton id="addTemplateProperty"
+                     value="#{msgs.eigenschaftHinzufuegen}"
                      actionListener="#{ProzessverwaltungForm.createTemplateProperty}"
                      oncomplete="PF('editTemplateDialog').show()"
                      icon="fa fa-plus-circle fa-lg"
