--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -44,12 +44,13 @@
                 <h:outputText value="#{item.project.title}"/>
             </p:column>
             <p:column styleClass="actionsColumn" headerText="#{msgs.auswahl}">
-                <h:link outcome="/pages/processEdit"
+                <h:link id="editProcess"
+                        outcome="/pages/processEdit"
                         title="#{msgs.prozessBearbeiten}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="id" value="#{item.id}" />
                 </h:link>
-                <h:commandLink action="#{Metadaten.readXml}" title="#{msgs.metadatenBearbeiten}"
+                <h:commandLink id="readXML" action="#{Metadaten.readXml}" title="#{msgs.metadatenBearbeiten}"
                                rendered="#{ProzessverwaltungForm.displayMode.mode != 'template'}">
                     <h:graphicImage><i class="fa fa-file-o"/></h:graphicImage>
                     <f:param name="ProzesseID" value="#{item.id}"/>
