--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -61,19 +61,29 @@
                     </li>
                     <li>
                         <!-- Dashboard menu -->
-                        <a href="#"><i class="fa fa-th fa-lg"/></a>
+                        <a href="#" id="dashboard-menu"><i class="fa fa-th fa-lg"/></a>
                         <ul>
                             <li><h3>#{msgs.dashboard}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.schritte}" outcome="tasks"><i class="fa fa-bell fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" outcome="processes"><i class="fa fa-hourglass-3 fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.projekte}" outcome="projects"><i class="fa fa-folder-open fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" outcome="users"><i class="fa fa-user fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.modules}" outcome="newTaskManager"><i class="fa fa-puzzle-piece fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.clients}" outcome="clients"><i
+                            <li class="nav-pic-text"><h:link value="#{msgs.schritte}" id="linkTasks" outcome="tasks"><i
+                                class="fa fa-bell fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" id="linkProcesses"
+                                                             outcome="processes"><i
+                                class="fa fa-hourglass-3 fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.projekte}" id="linkProjects"
+                                                             outcome="projects"><i
+                                class="fa fa-folder-open fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.benutzer}" id="linkUsers" outcome="users"><i
+                                class="fa fa-user fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.modules}" id="linkModules"
+                                                             outcome="newTaskManager"><i
+                                class="fa fa-puzzle-piece fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.clients}" id="linkClients" outcome="clients"><i
                                 class="fa fa-suitcase fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.help}" outcome="help"><i
+                            <li class="nav-pic-text"><h:link value="#{msgs.help}" id="linkHelp" outcome="help"><i
                                 class="fa fa-life-ring fa-lg"/></h:link></li>
-                            <li class="nav-pic-text"><h:link value="#{msgs.indexing}" outcome="indexingPage"><i class="fa fa-database fa-lg"/></h:link></li>
+                            <li class="nav-pic-text"><h:link value="#{msgs.indexing}" id="linkIndexing"
+                                                             outcome="indexingPage"><i
+                                class="fa fa-database fa-lg"/></h:link></li>
                         </ul>
                     </li>
                     <li>
